# cpp-ObjectFolowing

./: .gitignore
cpp-ObjectFollowing/: CMakeLists.txt
cpp-ObjectFollowing/src/: main.cpp
cpp-ObjectFollowing/src/Targets/: Target.h
cpp-ObjectFollowing/src/Trackers/: EdgeDetector.h  FaceTracker.cpp  FaceTracker.h  MasterTracker.h  ObjectTracker.h  TargetManager.cpp  TargetManager.h  TrackerManager.cpp  TrackerManager.h
cpp-OpenCV/: CMakeLists.txt
cpp-OpenCV/src/: FaceDetector.cpp  FaceDetector.h  ObjectTracker.cpp  WebcamViewer.cpp  WebcamViewer.h  global.cpp  global.h  main.cpp  yolo.cpp  yolo.h
cpp-OpenCV/src/Targets/: ObjInfo.h
cpp-OpenCV/src/Trackers/: ContourTracker.cpp  ContourTracker.h  EdgeDetector.cpp  EdgeDetector.h  FaceTracker.cpp  FaceTracker.h  LineModTracker.cpp  LineModTracker.h  MasterTracker.h  ObjectTracker.cpp  Renderer.cpp  Renderer.h  TargetManager.cpp  TargetManager.h  TrackerManager.cpp  TrackerManager.h
